--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.2",
     "@react-native-community/viewpager": "^2.0.1",
     "axios": "^0.19.0",
     "react": "16.9.0",
