--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.0",
     "react": "16.9.0",
     "react-native": "0.61.4",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-progress-bar-animated": "^1.0.6",
@@ -23,6 +24,7 @@
     "react-native-scrollable-tab-view": "https://github.com/PizzaLiu/react-native-scrollable-tab-view#b45bde7fc",
     "react-native-svg": "^9.13.3",
     "react-navigation": "^4.0.10",
+    "react-navigation-animated-switch": "^0.3.2",
     "react-navigation-stack": "^1.9.4"
   },
   "devDependencies": {
