--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
+    "@react-native-community/push-notification-ios": "^1.0.2",
     "@react-native-community/viewpager": "^2.0.1",
     "axios": "^0.19.0",
     "react": "16.9.0",
@@ -19,6 +20,7 @@
     "react-native-gesture-handler": "^1.4.1",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-progress-bar-animated": "^1.0.6",
+    "react-native-push-notification": "^3.1.9",
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-scrollable-tab-view": "https://github.com/PizzaLiu/react-native-scrollable-tab-view#b45bde7fc",
