--- a/ios/BabyApp.xcodeproj/xcshareddata/xcschemes/BabyApp.xcscheme
+++ b/ios/BabyApp.xcodeproj/xcshareddata/xcschemes/BabyApp.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "fisio.app"
-               BlueprintName = "fisio"
-               ReferencedContainer = "container:fisio.xcodeproj">
+               BuildableName = "BabyApp.app"
+               BlueprintName = "BabyApp"
+               ReferencedContainer = "container:BabyApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "fisioTests.xctest"
-               BlueprintName = "fisioTests"
-               ReferencedContainer = "container:fisio.xcodeproj">
+               BuildableName = "BabyAppTests.xctest"
+               BlueprintName = "BabyAppTests"
+               ReferencedContainer = "container:BabyApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -55,27 +55,29 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "fisio.app"
-            BlueprintName = "fisio"
-            ReferencedContainer = "container:fisio.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "fisioTests.xctest"
-               BlueprintName = "fisioTests"
-               ReferencedContainer = "container:fisio.xcodeproj">
+               BuildableName = "BabyAppTests.xctest"
+               BlueprintName = "BabyAppTests"
+               ReferencedContainer = "container:BabyApp.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+            BuildableName = "BabyApp.app"
+            BlueprintName = "BabyApp"
+            ReferencedContainer = "container:BabyApp.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -92,11 +94,13 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "fisio.app"
-            BlueprintName = "fisio"
-            ReferencedContainer = "container:fisio.xcodeproj">
+            BuildableName = "BabyApp.app"
+            BlueprintName = "BabyApp"
+            ReferencedContainer = "container:BabyApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -109,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "fisio.app"
-            BlueprintName = "fisio"
-            ReferencedContainer = "container:fisio.xcodeproj">
+            BuildableName = "BabyApp.app"
+            BlueprintName = "BabyApp"
+            ReferencedContainer = "container:BabyApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
